--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-04-04 Mon 03:13 -->
+<!-- 2022-04-04 Mon 03:45 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -55,7 +55,7 @@
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a></li>
-<li><a href="#orgb32fc0d">makefile</a></li>
+<li><a href="#orga45109a">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -78,12 +78,12 @@ Programs necessary for the bootstrap:
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-plaintext match-braces rainbow-braces" id="org544335f">yadm git "make gnumake" fd emacs
+<pre><code class="language-plaintext match-braces rainbow-braces" id="org56a8c95">yadm git "make gnumake" fd emacs
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="orgb78166b">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="org3de32ed">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -154,7 +154,7 @@ if [ "$yc" == "y" ] || [ "$yc" == "yes" ]; then
     fi
 
     yadm remote set-url --push origin git@github.com:shadowrylander/shadowrylander.git
-    yadm gitconfg --unset core.worktree
+    yadm gitconfig --unset core.worktree
 
     # TODO: May need `yadm stash' here
     # yadm stash
@@ -201,9 +201,9 @@ fi
 </div>
 </div>
 
-<div id="outline-container-orgb32fc0d" class="outline-2">
-<h2 id="orgb32fc0d">makefile</h2>
-<div class="outline-text-2" id="text-orgb32fc0d">
+<div id="outline-container-orga45109a" class="outline-2">
+<h2 id="orga45109a">makefile</h2>
+<div class="outline-text-2" id="text-orga45109a">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -233,7 +233,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-04-04 Mon 03:13</p>
+<p class="date">Created: 2022-04-04 Mon 03:45</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
