--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-04-04 Mon 04:07 -->
+<!-- 2022-04-04 Mon 04:28 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -57,7 +57,7 @@
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a></li>
-<li><a href="#org276c9cb">makefile</a></li>
+<li><a href="#org7b4ec3d">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -80,12 +80,12 @@ Programs necessary for the bootstrap:
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-plaintext match-braces rainbow-braces" id="orge3dfc08">yadm git "make gnumake" fd emacs
+<pre><code class="language-plaintext match-braces rainbow-braces" id="orge6348a2">yadm git "make gnumake" fd emacs
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="org19fe879">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="org75e8762">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -156,7 +156,6 @@ if [ "$yc" == "y" ] || [ "$yc" == "yes" ]; then
     fi
 
     yadm remote set-url --push origin git@github.com:shadowrylander/shadowrylander.git
-    yadm gitconfig core.worktree $HOME
 
     # TODO: May need `yadm stash' here
     # yadm stash
@@ -187,7 +186,11 @@ fi
 
 read -p $'Initialize Yadm Submodules?\n' ys &lt; /dev/tty
 if [ "$ys" == "y" ] || [ "$ys" == "yes" ]; then
+    if [ "$impermanent" == "y" ] || [ "$impermanent" == "yes" ]; then
+	yadm gitconfig core.worktree $worktree
+    fi
     GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm submodule update --init --depth 1 --recursive --remote --force
+    yadm gitconfig core.worktree $HOME
     make -f "$HOME/.emacs.d/makefile" soft-init
 fi
 
@@ -203,9 +206,9 @@ fi
 </div>
 </div>
 
-<div id="outline-container-org276c9cb" class="outline-2">
-<h2 id="org276c9cb">makefile</h2>
-<div class="outline-text-2" id="text-org276c9cb">
+<div id="outline-container-org7b4ec3d" class="outline-2">
+<h2 id="org7b4ec3d">makefile</h2>
+<div class="outline-text-2" id="text-org7b4ec3d">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -235,7 +238,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-04-04 Mon 04:07</p>
+<p class="date">Created: 2022-04-04 Mon 04:28</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
@@ -275,7 +278,6 @@ if [ "$yc" == "y" ] || [ "$yc" == "yes" ]; then
     fi
 
     yadm remote set-url --push origin git@github.com:shadowrylander/shadowrylander.git
-    yadm gitconfig core.worktree $HOME
 
     # TODO: May need `yadm stash' here
     # yadm stash
@@ -306,7 +308,11 @@ fi
 
 read -p $'Initialize Yadm Submodules?\n' ys < /dev/tty
 if [ "$ys" == "y" ] || [ "$ys" == "yes" ]; then
+    if [ "$impermanent" == "y" ] || [ "$impermanent" == "yes" ]; then
+        yadm gitconfig core.worktree $worktree
+    fi
     GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm submodule update --init --depth 1 --recursive --remote --force
+    yadm gitconfig core.worktree $HOME
     make -f "$HOME/.emacs.d/makefile" soft-init
 fi
 
