--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-04-04 Mon 05:01 -->
+<!-- 2022-04-24 Sun 02:48 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -54,8 +54,9 @@
 <div id="text-table-of-contents">
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
+<li><a href="#697a3a77-89eb-4408-8cac-a5001e05daa2">index.hy</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a></li>
-<li><a href="#org56ceeab">makefile</a></li>
+<li><a href="#orgc31267d">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -70,6 +71,169 @@
 </div>
 </div>
 
+<div id="outline-container-697a3a77-89eb-4408-8cac-a5001e05daa2" class="outline-2">
+<h2 id="697a3a77-89eb-4408-8cac-a5001e05daa2">index.hy</h2>
+<div class="outline-text-2" id="text-697a3a77-89eb-4408-8cac-a5001e05daa2">
+<div class="org-src-container">
+<pre><code class="language-plaintext match-braces rainbow-braces">"
+#! nix-shell -p python310 python310Packages.bakery yadm git gnumake fd emacs
+#! nix-shell -I nixpkgs=https://github.com/shadowrylander/nixpkgs/archive/j.tar.gz
+#! nix-shell -i hy
+"
+(import sys [argv])
+(del (get argv 0))
+
+(import bakery)
+(import bakery [make nixos-generate-config yadm zfs])
+(import click)
+(import os [path])
+(import pathlib [Path])
+(import stat)
+(import socket)
+
+(defn yes? [ var ] (in (.lower var) (, "y" "yes")))
+(defn no? [ var ] (if (in (.lower var) (, "n" "no")) False var))
+(defn repo-exists [[secret False]]
+      (and (.exists Path (.join path home ".local" "share" (if secret "yadm-sec" "yadm") "repo.git"))
+	   (yes? (input (+ (if secret "Secrets r" "R") "epo already exists! Force clone?")))))
+(defn chmod-bootstrap [ bootstrap ] (.chmod bootstrap (| (| (| (.stat bootstrap) (.S_IEXEC stat)) (.S_IXGRP stat)) (.S_IXOTH stat))))
+#@((.command click)
+   (.option click "-b" "--bootstrap" :prompt True)
+   (.option click "-i" "--impermanent" :prompt True)
+   (.option click "-I" "--initialize-submodules" :prompt True)
+   (.option click "-s" "--secrets" :prompt True)
+   (.option click "-y" "--yadm-clone" :prompt True)
+   (.option click "-z" "--zfs-root" :prompt True)
+   (defn main [ impermanent yadm-clone secrets bootstrap zfs-root initialize-submodules ]
+	 (let [ home (.home Path)
+		impermanent (yes? impermanent)
+		worktree (if impermanent
+			    f"/persist/{home}"
+			    home)
+		yadm-clone (yes? yadm-clone)
+		zfs-root (yes? zfs-root)
+		secrets (no? secrets)
+		initialize-submodules (yes? initialize-submodules)
+		bootstrap (yes? bootstrap)
+		clone-opts { "w" worktree "no-bootstrap" True }
+		bootstrap-path (Path f"{home}/.config/yadm/bootstrap")
+		secret-bootstrap-path (Path f"{home}/.config/yadm-sec/bootstrap")
+		bootstrap-bin (bakery :program- bootstrap-path)
+		secret-bootstrap-bin (bakery :program- secret-bootstrap-path)
+		dataset f"{(.gethostname socket)}/shadowrylander" ]
+	      (if yadm-clone
+		  (do (.clone yadm :f (repo-exists) #** clone-opts "https://github.com/shadowrylander/shadowrylander.git")
+		      (.remote yadm :m/starter-args (, "set-url") :push True "origin" "git@github.com:shadowrylander/shadowrylander.git")))
+	      (nixos-generate-config :run True)
+	      (if secrets
+		  (do (.sec yadm :m/starter-args (, "clone") :f (repo-exists True) #** clone-opts secrets)
+		      (.sec yadm "gitconfig" "core.worktree" home)
+		      (chmod-bootstrap secret-bootstrap-path)
+		      (secret-bootstrap-bin worktree)))
+	      (if initialize-submodules
+		  (do (if impermanent
+			  (.gitconfig yadm "core.worktree" worktree))
+		      (.submodule (yadm :C worktree) :m/starter-args (, "update") :m/exports { "GIT_SSL_NO_VERIFY" 1 "GIT_DISCOVERY_ACROSS_FILESYSTEM" 1 } :init True :recursive True :remote True :force True)
+		      (.gitconfig yadm "core.worktree" home)
+		      (make :f f"{worktree}/.emacs.d/makefile" "soft-init")))
+	      (if bootstrap
+		  (do (chmod-bootstrap bootstrap-path)
+		      (bootstrap-bin worktree)))
+	      (if zfs-root
+		  (do (.set zfs :snapdir "visible" dataset :m/run True)
+		      (.inherit zfs :r True "snapdir" dataset :m/run True))))))
+</code></pre>
+</div>
+
+<div class="org-src-container">
+<pre><code class="language-hy match-braces rainbow-braces">"
+#! nix-shell -p python310 python310Packages.bakery yadm git gnumake fd emacs
+#! nix-shell -I nixpkgs=https://github.com/shadowrylander/nixpkgs/archive/j.tar.gz
+#! nix-shell -i hy
+"
+</code></pre>
+</div>
+
+<div class="org-src-container">
+<pre><code class="language-hy match-braces rainbow-braces">(import sys [argv])
+(del (get argv 0))
+
+(import bakery)
+(import bakery [make nixos-generate-config yadm zfs])
+(import click)
+(import os [path])
+(import pathlib [Path])
+(import stat)
+(import socket)
+
+(defn yes? [ var ] (in (.lower var) (, "y" "yes")))
+(defn no? [ var ] (if (in (.lower var) (, "n" "no")) False var))
+(defn repo-exists [[secret False]]
+      (and (.exists Path (.join path home ".local" "share" (if secret "yadm-sec" "yadm") "repo.git"))
+	   (yes? (input (+ (if secret "Secrets r" "R") "epo already exists! Force clone?")))))
+</code></pre>
+</div>
+
+<p>
+Adapted from <a href="https://stackoverflow.com/users/180464/eric-frederich">eric.frederich's</a> comment <a href="https://stackoverflow.com/questions/12791997/how-do-you-do-a-simple-chmod-x-from-within-python#comment26692909_12792002">here</a>:
+</p>
+
+<div class="org-src-container">
+<pre><code class="language-hy match-braces rainbow-braces">(defn chmod-bootstrap [ bootstrap ] (.chmod bootstrap (| (| (| (.stat bootstrap) (.S_IEXEC stat)) (.S_IXGRP stat)) (.S_IXOTH stat))))
+</code></pre>
+</div>
+
+<div class="org-src-container">
+<pre><code class="language-hy match-braces rainbow-braces">#@((.command click)
+   (.option click "-b" "--bootstrap" :prompt True)
+   (.option click "-i" "--impermanent" :prompt True)
+   (.option click "-I" "--initialize-submodules" :prompt True)
+   (.option click "-s" "--secrets" :prompt True)
+   (.option click "-y" "--yadm-clone" :prompt True)
+   (.option click "-z" "--zfs-root" :prompt True)
+   (defn main [ impermanent yadm-clone secrets bootstrap zfs-root initialize-submodules ]
+	 (let [ home (.home Path)
+		impermanent (yes? impermanent)
+		worktree (if impermanent
+			    f"/persist/{home}"
+			    home)
+		yadm-clone (yes? yadm-clone)
+		zfs-root (yes? zfs-root)
+		secrets (no? secrets)
+		initialize-submodules (yes? initialize-submodules)
+		bootstrap (yes? bootstrap)
+		clone-opts { "w" worktree "no-bootstrap" True }
+		bootstrap-path (Path f"{home}/.config/yadm/bootstrap")
+		secret-bootstrap-path (Path f"{home}/.config/yadm-sec/bootstrap")
+		bootstrap-bin (bakery :program- bootstrap-path)
+		secret-bootstrap-bin (bakery :program- secret-bootstrap-path)
+		dataset f"{(.gethostname socket)}/shadowrylander" ]
+	      (if yadm-clone
+		  (do (.clone yadm :f (repo-exists) #** clone-opts "https://github.com/shadowrylander/shadowrylander.git")
+		      (.remote yadm :m/starter-args (, "set-url") :push True "origin" "git@github.com:shadowrylander/shadowrylander.git")))
+	      (nixos-generate-config :run True)
+	      (if secrets
+		  (do (.sec yadm :m/starter-args (, "clone") :f (repo-exists True) #** clone-opts secrets)
+		      (.sec yadm "gitconfig" "core.worktree" home)
+		      (chmod-bootstrap secret-bootstrap-path)
+		      (secret-bootstrap-bin worktree)))
+	      (if initialize-submodules
+		  (do (if impermanent
+			  (.gitconfig yadm "core.worktree" worktree))
+		      (.submodule (yadm :C worktree) :m/starter-args (, "update") :m/exports { "GIT_SSL_NO_VERIFY" 1 "GIT_DISCOVERY_ACROSS_FILESYSTEM" 1 } :init True :recursive True :remote True :force True)
+		      (.gitconfig yadm "core.worktree" home)
+		      (make :f f"{worktree}/.emacs.d/makefile" "soft-init")))
+	      (if bootstrap
+		  (do (chmod-bootstrap bootstrap-path)
+		      (bootstrap-bin worktree)))
+	      (if zfs-root
+		  (do (.set zfs :snapdir "visible" dataset :m/run True)
+		      (.inherit zfs :r True "snapdir" dataset :m/run True))))))
+</code></pre>
+</div>
+</div>
+</div>
+
 <div id="outline-container-f3e32608-7200-4808-9d42-59112f32d395" class="outline-2">
 <h2 id="f3e32608-7200-4808-9d42-59112f32d395">index.html</h2>
 <div class="outline-text-2" id="text-f3e32608-7200-4808-9d42-59112f32d395">
@@ -78,12 +242,12 @@ Programs necessary for the bootstrap:
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-plaintext match-braces rainbow-braces" id="orgb3c4c83">yadm git "make gnumake" fd emacs
+<pre><code class="language-plaintext match-braces rainbow-braces" id="org830fcab">yadm git "make gnumake" fd emacs
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="orgfec913b">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="orge164acc">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -92,8 +256,7 @@ This was adapted from <a href="https://ellipsis.sh/">ellipsis.sh</a>, raw file <
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-sh match-braces rainbow-braces"># This index file is also a shell script! Go to index.syvl.org to see what it can do!
-&lt;&lt;\EOF
+<pre><code class="language-sh match-braces rainbow-braces">&lt;&lt;\EOF
 </code></pre>
 </div>
 
@@ -102,26 +265,15 @@ This was adapted from <a href="https://ellipsis.sh/">ellipsis.sh</a>, raw file <
 </code></pre>
 </div>
 
+<p>
+For information on how to prompt when piping to <code>sh</code>, see <a href="https://unix.stackexchange.com/users/48083/graeme">Graeme's</a> answer <a href="https://unix.stackexchange.com/a/121255/270053">here</a>,
+and <a href="https://stackoverflow.com/users/2092245/ferhtgoldaraz">ferhtgoldaraz's</a> answer <a href="https://stackoverflow.com/a/15696250/10827766">here</a>.
+</p>
+
 <div class="org-src-container">
 <pre><code class="language-sh match-braces rainbow-braces">EOF
-</code></pre>
-</div>
-
-<div class="org-src-container">
-<pre><code class="language-sh match-braces rainbow-braces">setFail () { set -eo pipefail; }
-ensure () {
-    hash "$1" 2&gt; /dev/null
-    if [ $? -ne 0 ]; then
-	hash nix 2&gt; /dev/null
-	[ $? -ne 0 ] &amp;&amp; sh &lt;(curl -fsSL https://nixos.org/nix/install) --daemon
-	[ -z "$2" ] &amp;&amp; nix-env -i "$1" || nix-env -i "$2"
-    fi
-}
-remove () { [ -z "$2" ] &amp;&amp; nix-env -e "$1" || nix-env -e "$2"; }
-
-for p in yadm git "make gnumake" fd emacs; do ensure $p; done
-
-setFail
+set -eo pipefail
+bootstrap="$HOME/.local/share/syvl-bootstrap"
 </code></pre>
 </div>
 
@@ -131,78 +283,24 @@ and <a href="https://stackoverflow.com/users/2092245/ferhtgoldaraz">ferhtgoldara
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-sh match-braces rainbow-braces">read -p $'Impermanent?\n' impermanent &lt; /dev/tty
-if [ "$impermanent" == "y" ] || [ "$impermanent" == "yes" ]; then
-    worktree="/persist/$HOME"
-else
-    worktree="$HOME"
+<pre><code class="language-sh match-braces rainbow-braces">read -p $'Curl index script?\n' cis &lt; /dev/tty
+if [ "$cis" == "y" ] || [ "$cis" == "yes" ]; then
+    curl -fsSLo $bootstrap https://raw.githubusercontent.com/sylvorg/sylvorg.github.io/main/index.hy
 fi
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-sh match-braces rainbow-braces">read -p $'Yadm clone?\n' yc &lt; /dev/tty
-cloneCommand="-w $worktree --no-bootstrap https://github.com/shadowrylander/shadowrylander.git"
-if [ "$yc" == "y" ] || [ "$yc" == "yes" ]; then
-    if [ -d "$HOME/.local/share/yadm/repo.git" ]; then
-	read -p $'Repo already exists! Force clone?\n' fc &lt; /dev/tty
-	if [ "$fc" == "y" ] || [ "$fc" == "yes" ]; then
-	    yadm clone -f $cloneCommand
-	fi
-    else
-	yadm clone $cloneCommand
-    fi
-
-    yadm remote set-url --push origin git@github.com:shadowrylander/shadowrylander.git
-    yadm stash
-fi
-
-nixos-generate-config || :
-
-read -p $'Tell me your secrets!\n' secrets &lt; /dev/tty
-secCloneCommand="-w $worktree --no-bootstrap $secrets"
-if [ "$secrets" != "n" ] &amp;&amp; [ "$secrets" != "no" ]; then
-    if [ -d "$HOME/.local/share/yadm-sec/repo.git" ]; then
-	read -p $'Secrets repo already exists! Force clone secrets?\n' forceSecrets &lt; /dev/tty
-	if [ "$forceSecrets" == "y" ] || [ "$forceSecrets" == "yes" ]; then
-	    yadm sec clone -f $secCloneCommand
-	fi
-    else
-	yadm sec clone $secCloneCommand
-    fi
-
-    yadm sec gitconfig core.worktree $HOME
-    yadm sec stash
-
-    chmod +x "$HOME/.config/yadm-sec/bootstrap"
-    "$HOME/.config/yadm-sec/bootstrap"
-fi
-
-read -p $'Initialize Yadm Submodules?\n' ys &lt; /dev/tty
-if [ "$ys" == "y" ] || [ "$ys" == "yes" ]; then
-    if [ "$impermanent" == "y" ] || [ "$impermanent" == "yes" ]; then
-	yadm gitconfig core.worktree $worktree
-    fi
-    GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm -C $worktree submodule update --init --depth 1 --recursive --remote --force
-    yadm gitconfig core.worktree $HOME
-    make -f "$worktree/.emacs.d/makefile" soft-init
-fi
-
-read -p $'Bootstrap?\n' bootstrap &lt; /dev/tty
-if [ "$bootstrap" == "y" ] | [ "$bootstrap" == "yes" ]; then
-    chmod +x "$HOME/.config/yadm/bootstrap"
-    "$HOME/.config/yadm/bootstrap"
-fi
-
-# for p in yadm git "make gnumake" fd emacs; do remove $p; done
+<pre><code class="language-sh match-braces rainbow-braces">chmod +x $bootstrap
+$bootstrap || echo "Sorry; something happened! Please try again!"
 </code></pre>
 </div>
 </div>
 </div>
 
-<div id="outline-container-org56ceeab" class="outline-2">
-<h2 id="org56ceeab">makefile</h2>
-<div class="outline-text-2" id="text-org56ceeab">
+<div id="outline-container-orgc31267d" class="outline-2">
+<h2 id="orgc31267d">makefile</h2>
+<div class="outline-text-2" id="text-orgc31267d">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -232,7 +330,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-04-04 Mon 05:01</p>
+<p class="date">Created: 2022-04-24 Sun 02:48</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
